# steinmarder

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  ORIGINAL_AUTHOR.md  README.md  baseline_bvh.csv
src/apple_re/: CMakeLists.txt  README.md
src/apple_re/host/: metal_probe_host.m
src/apple_re/include/: apple_re_time.h
src/apple_re/probes/: apple_cpu_cache_pressure.c  apple_cpu_latency.c
src/apple_re/results/: .gitignore
src/apple_re/results/blessed/2026-03-30_tranche1_CDE_keepalive/: metal_variant_matrix.csv  xctrace_artifacts.txt  xctrace_gpu_baseline_metal-command-buffer-completed.xml  xctrace_gpu_occupancy_heavy_metal-application-encoders-list.xml  xctrace_gpu_register_pressure_metal-command-buffer-completed.xml  xctrace_gpu_threadgroup_heavy_metal-command-buffer-completed.xml  xctrace_gpu_threadgroup_heavy_metal-gpu-intervals.xml  xctrace_metric_row_counts.csv  xctrace_schema_inventory.csv
src/apple_re/results/blessed/2026-03-30_tranche1_phaseE_keepalive/: counter_latency_report.md  step_status.csv  xctrace_extract_summary.txt
src/apple_re/results/blessed/2026-03-30_tranche1_r2/: metal_timing.csv  metal_variant_matrix.csv  neural_probe.json  run_manifest.json  run_summary.md  torch_cpu_vs_mps.json  versions.json
src/apple_re/results/blessed/2026-03-30_tranche1_r4_m1_cuda_grade/: RUN_SUMMARY.md  metal_timing.csv  mnemonic_interpretation.md  xctrace_cpu_time_profiler_time-sample.xml  xctrace_gpu_baseline_metal-application-encoders-list.xml  xctrace_gpu_baseline_metal-command-buffer-completed.xml  xctrace_gpu_baseline_time-profile.xml  xctrace_gpu_baseline_time-sample.xml  xctrace_gpu_compare_time-sample.xml
src/apple_re/results/blessed/2026-03-30_tranche1_r5_variants_frontier/: ANALYSIS_NEXT_STEPS.md  counter_latency_report.md  gpu_occupancy_heavy_toc.xml  gpu_threadgroup_heavy_stage_dir.txt  metal_air_opcode_counts.csv  metal_correctness.csv  xctrace_gpu_baseline_life-cycle-period.xml  xctrace_gpu_baseline_metal-gpu-state-intervals.xml  xctrace_gpu_baseline_process-info.xml  xctrace_gpu_baseline_time-profile.xml  xctrace_gpu_occupancy_heavy_metal-application-encoders-list.xml  xctrace_gpu_occupancy_heavy_metal-command-buffer-completed.xml  xctrace_gpu_occupancy_heavy_time-sample.xml  xctrace_gpu_threadgroup_heavy_metal-application-encoders-list.xml  xctrace_gpu_threadgroup_heavy_metal-driver-intervals.xml  xctrace_gpu_threadgroup_heavy_metal-gpu-intervals.xml  xctrace_gpu_threadgroup_heavy_metal-gpu-state-intervals.xml  xctrace_row_deltas.csv  xctrace_schema_inventory.csv
src/apple_re/results/blessed/2026-03-30_tranche1_r6_cde/: gpu_baseline_toc.xml  gpu_occupancy_heavy_toc.xml  gpu_register_pressure_stage_dir.txt  gpu_threadgroup_heavy_stage_dir.txt  metal_timing.csv  summary.md  xctrace_gpu_baseline_life-cycle-period.xml  xctrace_gpu_baseline_metal-application-encoders-list.xml  xctrace_gpu_baseline_metal-command-buffer-completed.xml  xctrace_gpu_baseline_metal-driver-intervals.xml  xctrace_gpu_baseline_metal-gpu-counter-intervals.xml  xctrace_gpu_baseline_metal-gpu-intervals.xml  xctrace_gpu_baseline_time-profile.xml  xctrace_gpu_baseline_time-sample.xml  xctrace_gpu_occupancy_heavy_metal-driver-intervals.xml  xctrace_row_deltas.csv  (+19 more)
src/apple_re/results/probe_sfu_dep_chain_20260403/: results.txt
src/apple_re/results/tier_bc_tp_v3_20260403_131009/: b4_rsqrt_tp_v4.txt  probe_recip_fast_2chain.txt  probe_rsqrt_2chain.txt
src/apple_re/scripts/: analyze_tranche_mnemonics.py  analyze_xctrace_row_deltas.py  apple_capability_report.py  audit_macos_re_env.sh  bootstrap_neural_lane.sh  build_metal_probe_host.sh  capture_gpu_counters.sh  capture_gpu_format_counters.sh  classify_metal_type_surface.py  compile_metal_probe.sh  extract_gpu_counters.py  extract_xctrace_metrics.py  neural_typed_matrix.py  prime_sudo_cache.sh  probe_coreml_dispatch_lat.swift  run_apple_tranche1.sh  run_metal_probe_host.sh  run_next42_cpu_cache_probes.sh  run_next42_cpu_probes.sh  run_next42_cpu_suite.sh  run_next42_metal_probes.sh  run_next42_metal_suite.sh  run_next42_moltenvk_probe_suite.sh  run_next42_neural_suite.sh  run_next42_opengl_probe_suite.sh
src/apple_re/shaders/: probe_atomic_lat.metal  probe_dd_genuine_lat.metal  probe_dd_lat.metal  probe_ds_mul_genuine_lat.metal  probe_ds_mul_lat.metal  probe_fadd_fmul_lat_cmp.metal  probe_fma16acc_tp.metal  probe_fma_lat.metal  probe_fp16_throughput.metal  probe_fp8x8_lat.metal  probe_global_l1_lat_v2.metal  probe_global_mem_lat.metal  probe_imul_lat.metal  probe_int32_lat.metal  probe_int32_mul_lat.metal  probe_int32_xorshift_lat.metal  probe_int64_mul_lat.metal  probe_int64_xorshift_lat.metal  probe_l2_lat.metal  probe_recip_rsqrt.metal  probe_register_light.metal  probe_register_pressure.metal  probe_rsqrt_tp_v3.metal  probe_sfu_dep_chain.metal  probe_sgmm_lat.metal  probe_sgmm_tp.metal  probe_simd_broadcast_lat.metal  probe_simd_prefix_scan_lat.metal  probe_simd_reduce_lat.metal  probe_simdgroup_lat.metal  probe_simdgroup_reduce.metal  probe_special_unit_tp_probe.metal  probe_tgsm_lat.metal  probe_threadgroup_lat.metal  probe_threadgroup_lat_v2.metal  probe_threadgroup_minimal.metal  probe_veltkamp_split_lat.metal
src/cuda_lbm/: CMakeLists.txt  README.md  host_wrappers.cu  kernels_bf16.cu  kernels_bf16_soa.cu  kernels_fp16.cu  kernels_fp16_soa.cu  kernels_fp32_soa_cs.cu  kernels_fp64.cu  kernels_fp64_soa.cu  kernels_fp8.cu  kernels_fp8_e5m2.cu  kernels_fp8_e5m2_soa.cu  kernels_fp8_soa.cu  kernels_int16.cu  kernels_int16_soa.cu  kernels_int8.cu  kernels_int8_soa.cu  kernels_int8_soa_lloydmax.cu  kernels_int8_soa_lloydmax_pipe.cu  kernels_int8_soa_mrt_aa.cu  kernels_inv_tau_precompute.cu  kernels_q16_soa.cu  kernels_q16_soa_lm.cu  kernels_q32_soa.cu  kernels_soa.cu
src/cuda_lbm/bench/: bench_harness.cu  bench_main.cu  bench_validate.cu  lloydmax_codebook.cu  lloydmax_codebook.h
src/cuda_lbm/include/: host_wrappers.h  lbm_kernels.h  lbm_metrics.h
src/cuda_lbm/scripts/: check_spills.sh  profile_ncu_all.sh  run_cuda_decision_tranche.sh
src/cuda_lbm/sparse/: kernels_sparse_lbm.cu
src/cuda_lbm/test/: test_main.cu
(+3015 files in other folders)
